--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="/" class="create-account">Create account</a>
             <a href="/" class="about-page">About</a>
             <input type="text" placeholder="Search...">
+            <button type="submit">Search</button>
         </div>
     </nav>
 </body>
